--- a/README.adoc
+++ b/README.adoc
@@ -1,13 +1,11 @@
 = MocKMP
 :icons: font
-:version: 1.17.0
-
-WARNING: MocKMP is currently NOT compatible with Kotlin 2.x.
-         We are currently working on the new MocKMP version 2.0 that will be.
+:version: 2.0.0
 
 A Kotlin/Multiplatform Kotlin Symbol Processor that generates Mocks & Fakes.
 
-Built in collaboration with https://www.deezer.com/[Deezer].
+WARNING: Version 2.0 brings compatibility with Kotlin 2.0, but with breaking changes.
+If you used version 1.17, have a look at the https://kosi-libs.org/mockmp/2.0/migration/1to2.html[Migration Guide].
 
 
 == Installation
@@ -16,6 +14,7 @@ Built in collaboration with https://www.deezer.com/[Deezer].
 ----
 plugins {
     kotlin("multiplatform")
+    id("com.google.devtools.ksp")
     id("org.kodein.mock.mockmp") version "{version}"
 }
 
@@ -24,8 +23,9 @@ kotlin {
 }
 
 mockmp {
-    usesHelper = true
-    installWorkaround()
+    onTest {
+        withHelper()
+    }
 }
 ----
 
@@ -35,7 +35,7 @@ mockmp {
 [source,kotlin]
 ----
 class MyTest : TestsWithMocks() {
-    override fun setUpMocks() = injectMocks(mocker) //<1>
+    override fun setUpMocks() = mocker.injectMocks(this)
 
     @Mock lateinit var view: View
     @Fake lateinit var model: Model
