--- a/doc/modules/core/pages/helper.adoc
+++ b/doc/modules/core/pages/helper.adoc
@@ -1,17 +1,16 @@
-= The test class helper
+= The test helper
+
+== The `TestsWithMocks` abstract class
 
 MocKMP provides the `TestsWithMocks` helper class that your test classes can inherit from.
 It provides the following benefits:
 
 - Provides a `Mocker`.
-- Resets the `Mocker` before each tests.
+- Resets the `Mocker` before each test.
 - Provides `withMocks` property delegates to initialize objects with mocks.
 - Allows to call `every`, `everySuspending`, `verify`, and `verifyWithSuspend` without `mocker.`.
 
-It does not come with the standard runtime (as it forces the dependency to JUnit on the JVM), so to use it you need to either:
-
-* define `usesHelper = true` in the MocKMP Gradle plulgin configuration block,
-* or add the `mockmp-test-helper` implementation dependency.
+It does not come with the standard runtime (as it forces the dependency to JUnit on the JVM), so to use it you need to call `withHelper()` in the xref:setup.adoc#mockmp-gradle-config[MocKMP Gradle plugin configuration block].
 
 Here's a test class example with `TestsWithMocks`:
 
@@ -19,7 +18,7 @@ Here's a test class example with `TestsWithMocks`:
 ----
 @UsesFakes(User::class)
 class MyTests : TestsWithMocks() { //<1>
-    override fun setUpMocks() = injectMocks(mocker) //<2>
+    override fun setUpMocks() = mocker.injectMocks(this) //<2>
 
     @Mock lateinit var db: Database
     @Mock lateinit var api: API
@@ -44,7 +43,7 @@ NOTE: Properties delegated to `withMocks` will be (re)initialized *before each t
 
 [CAUTION]
 ====
-Because of https://youtrack.jetbrains.com/issue/KT-54932[this issue], you cannot consider that the mocks have been initialized in yout `@BeforeTest` methods.
+Because of https://youtrack.jetbrains.com/issue/KT-54932[this issue], you cannot consider that the mocks have been initialized in your other `@BeforeTest` methods.
 You can override `initMocksBeforeTest` if you need to initialize your mocks before each test:
 
 [source,kotlin]
@@ -57,6 +56,8 @@ class MyTests : TestsWithMocks() {
 }
 ----
 ====
+
+== The `ITestsWithMocks` interface
 
 In case your test class already extends another class, you can use the `ITestsWithMocks` interface instead:
 
