--- a/doc/modules/core/pages/setup.adoc
+++ b/doc/modules/core/pages/setup.adoc
@@ -1,74 +1,84 @@
 = MocKMP Setup
 
-== Setup MocKMP with the official plugin
+== Standard test setup
 
-The MocKMP Gradle plugin configures your project to use the Kotlin Symbol Processor using a workaround to a current KSP limitation.
-
-Once KSP properly supports hierarchical Multiplatform, this plugin will apply MocKMP "normally".
+First, add the gradle plugins:
 
 [source,kotlin,subs="verbatim,attributes"]
 .build.gradle.kts
 ----
 plugins {
-    kotlin("multiplatform")
-    id("org.kodein.mock.mockmp") version "{version}" //<1>
-}
-
-repositories {
-    mavenCentral()
-}
-
-kotlin {
-    jvm()
-    ios()
-    js(IR) {
-        browser()
-    }
-
-    sourceSets {
-        val commonTest by getting {
-            dependencies {
-                implementation(kotlin("test"))
-            }
-        }
-    }
-}
-
-mockmp {
-    // OPTIONAL!
-    usesHelper = true //<2>
-
-    // REQUIRED!
-    installWorkaround() // <3>
-}
-----
-<1> Applying the MocKMP plugin.
-<2> Requesting the *optional* `test-helper` dependency
-<3> *Must* be called *after* the `kotlin` configuration and *must be the last line* of the `mockmp` block.
-
-The plugin takes care of:
-
-* Applying the KSP Gradle plugin
-* Declaring the MocKMP KSP dependency
-* Declaring the MocKMP runtime dependencies
-* Applying the incomplete multiplatform support workaround:
-** Using Android if the Android plugin is applied
-** Using the JVM otherwise
-
-[WARNING]
-====
-If you are not using the same Kotlin version than the plugin, then you'll need to manually apply the KSP plugin *before* applying MocKMP:
-
-[source,kotlin]
-----
-plugins {
-    id("com.google.devtools.ksp") version "1.7.22-1.0.8"
+    kotlin("multiplatform") version "{kotlin-version}"
+    id("com.google.devtools.ksp") version "{ksp-version}"
     id("org.kodein.mock.mockmp") version "{version}"
 }
 ----
+
+IMPORTANT: MocKMP uses KSP but does not install it in your project.
+This is because the KSP version to use depends on the version of Kotlin you are using.
+It is therefore your responsibility to install it on your project along with MocKMP.
+
+Then, configure your Kotlin targets and dependencies.
+For example:
+
+[source,kotlin,subs="verbatim,attributes"]
+.build.gradle.kts
+----
+kotlin {
+    androidTarget()
+    jvmToolchain(17)
+
+    iosArm64()
+    iosSimulatorArm64()
+    iosX64()
+
+    sourceSets {
+        commonTest.dependencies {
+            implementation(kotlin("test"))
+        }
+        androidUnitTest.dependencies {
+            implementation(kotlin("test-junit"))
+        }
+    }
+}
+----
+
+Finally, apply MocKMP to your test source sets:
+
+IMPORTANT: This must be done *after* configuring Kotlin targets.
+
+[[mockmp-gradle-config]]
+[source,kotlin,subs="verbatim,attributes"]
+.build.gradle.kts
+----
+mockmp {
+    onTest()
+    // OR
+    onTest {
+        withHelper()
+    }
+}
+----
+
+[[junit-version]]
+[TIP]
+====
+The `withHelper()` *is optional* and will add the `TestsWithMocks` helper class dependency to your project.
+It will by default try to detect which JUnit version your JVM / Android target is using and may fail. +
+You can force the JUnit version by using `withHelper(junit4)` or `withHelper(junit5)`:
+
+[source,kotlin,subs="verbatim,attributes"]
+.build.gradle.kts
+----
+mockmp {
+    onTest {
+        withHelper(junit5)
+    }
+}
+----
 ====
 
-=== Applying to main source sets
+== Applying to main source sets
 
 In some cases, you may need to apply the processor to the common-main source-set instead of common-test.
 
@@ -76,82 +86,41 @@ In some cases, you may need to apply the processor to the common-main source-set
 .build.gradle.kts
 ----
 mockmp {
-    targetSourceSet = CommonMain
+    onMain {
+        public()
+    }
 }
 ----
 
+IMPORTANT: The `withHelper()` JUnit detection *will fail* when applying MocKMP to main source-sets.
+If you want to add the `TestsWithMocks` helper class to your main source-sets, you must specify explicitely which JUnit version to use.
 
-== Setup MocKMP manually with KSP and its incomplete multiplatform support
 
-KSP for multiplatform is in beta, and *https://github.com/google/ksp/issues/567[KSP for common tests is not supported]* (yet).
-
-To have IDEA completion, here's a trick that you can use (in fact, that's what the MocKMP plugin does):
+== Other configurations
 
 [source,kotlin,subs="verbatim,attributes"]
 .build.gradle.kts
 ----
-plugins {
-    kotlin("multiplatform")
-    id("com.google.devtools.ksp") version "{ksp-version}" //<1>
-}
-
-repositories {
-    mavenCentral()
-}
-
-kotlin {
-    jvm()
-    ios()
-    js(IR) {
-        browser()
-    }
-
-    sourceSets {
-        val commonTest by getting {
-            dependencies {
-                implementation(kotlin("test"))
-                implementation("org.kodein.mock:mockmp-runtime:{version}") //<2>
-                // OPTIONAL!
-                implementation("org.kodein.mock:mockmp-test-helper:{version}") //<2>
-            }
-            kotlin.srcDir("build/generated/ksp/jvm/jvmTest/kotlin") //<3>
-        }
-    }
-}
-
-dependencies {
-    "kspJvmTest"("org.kodein.mock:mockmp-processor:{version}") //<4>
-}
-
-tasks.withType<org.jetbrains.kotlin.gradle.dsl.KotlinCompile<*>>().all {
-    if (name.startsWith("compileTestKotlin")) {
-        dependsOn("kspTestKotlinJvm") //<5>
-    }
-}
-----
-<1> Applying the KSP plugin.
-<2> Adding the dependencies to the MocKMP runtime and the *optional* test helper.
-<3> Use KSP generated JVM sources on all targets.
-<4> Apply the processor only on the JVM target.
-<5> Make compilation of all targets dependant on the JVM KSP processor.
-
-
-== Generated classes & functions visibility
-
-By default, every generated class or function is *`internal`*.
-
-If you wish to have it *`public`* (because you need to share it across modules), then you can configure the processor to generate public classes & functions:
-
-[source,kotlin,subs="verbatim,attributes"]
-.build.gradle.kts
-----
-// When using the MocKMP plugin:
 mockmp {
-    public = true
-}
+    onTest { // or onMain
 
-// When using KSP directly:
-ksp {
-    arg("org.kodein.mock.visibility", "public")
+        // By default, MocKMP will be applied to all targets.
+        // This is therefore not necessary (as it is the default).
+        allTargets()
+        // But you can instead apply it to only a subset of specific targets.
+        specificTargets("jvm", "iosSimulatorArm64")
+
+        // If you want the generated mocks & fakes to be public instead of internal.
+        public()
+        // or
+        public(true)
+
+        // By default, the mocks & fakes accessors will be generated in the
+        // org.kodein.mock.generated package.
+        // You may change this if you have multiple modules using MocKMP, to avoid
+        // collision between generated accessors.
+        accessorsPackage("com.myproject.mockmp.generated")
+
+    }
 }
 ----
