update README with JB support

--- a/README.adoc
+++ b/README.adoc
@@ -54,3 +54,7 @@ class MyTest : TestsWithMocks() {
 == Read more
 
 See https://kosi-libs.org/mockmp/[MocKMP Documentation].
+
+== Supported by
+
+[![JetBrains logo.](https://resources.jetbrains.com/storage/products/company/brand/logos/jetbrains.svg)](https://jb.gg/OpenSourceSupport)
