fix link an adocs README

--- a/README.adoc
+++ b/README.adoc
@@ -57,4 +57,4 @@ See https://kosi-libs.org/mockmp/[MocKMP Documentation].
 
 == Supported by
 
-[![JetBrains logo.](https://resources.jetbrains.com/storage/products/company/brand/logos/jetbrains.svg)](https://jb.gg/OpenSourceSupport)
+image::https://resources.jetbrains.com/storage/products/company/brand/logos/jetbrains.svg[JetBrains logo.,link=https://jb.gg/OpenSourceSupport]
